include/pitaya.h

#define PC_PITAYA_H
#define PC_VERSION_NUM (PC_VERSION_MAJOR * 10000 + PC_VERSION_MINOR * 100 + PC_VERSION_REVISION)
#define PC_VERSION_STR ( PC_T(PC_VERSION_MAJOR) "." PC_T(PC_VERSION_MINOR) \
        "." PC_T(PC_VERSION_REVISION) "-" PC_VERSION_SUFFIX )
/**
 * error code
 */
#define PC_RC_OK 0
#define PC_RC_ERROR -1
typedef struct pc_client_s pc_client_t;
typedef struct pc_request_s pc_request_t;
typedef struct pc_notify_s pc_notify_t;
/**
 * Binary buffer
 */
typedef struct {
    uint8_t *base;
    int64_t  len;
} pc_buf_t;
PC_EXPORT int pc_lib_version(void);
PC_EXPORT const char* pc_lib_version_str(void);
/**
 * pc_lib_init and pc_lib_cleanup both should be invoked only once.
 */
typedef struct {
    const char *platform;
    const char *build_number;
    const char *version;
} pc_lib_client_info_t;
PC_EXPORT void pc_lib_init(void (*pc_log)(int level, const char* msg), 
                           void* (*pc_alloc)(size_t), 
                           void (*pc_free)(void* ), 
                           void* (*pc_realloc)(void*, size_t), 
                           pc_lib_client_info_t client_info);
/**
 * Event
 */

/**
 * event handler callback and event types
 *
 * arg1 and arg2 are significant for the following events:
 *   PC_EV_USER_DEFINED_PUSH - arg1 as push route, arg2 as push msg
 *   PC_EV_CONNECT_ERROR - arg1 as short error description
 *   PC_EV_CONNECT_FAILED - arg1 as short reason description
 *   PC_EV_UNEXPECTED_DISCONNECT - arg1 as short reason description
 *   PC_EV_PROTO_ERROR - arg1 as short reason description
 *   PC_EV_RECONNECT_FAILED - arg1 as short reason description
 *
 * For other events, arg1 and arg2 will be set to NULL.
 */
typedef void (*pc_event_cb_t)(pc_client_t *client, int ev_type, void* ex_data,
                              const char* arg1, const char* arg2);
PC_EXPORT int pc_client_add_ev_handler(pc_client_t* client, pc_event_cb_t cb,
        void* ex_data, void (*destructor)(void* ex_data));
/**
 * Error
 */
typedef struct {
    int code;
    pc_buf_t payload;
    int uv_code;
} pc_error_t;
/**
 * Request
 */

typedef void (*pc_request_success_cb_t)(const pc_request_t* req, const pc_buf_t *resp);
typedef void (*pc_request_error_cb_t)(const pc_request_t* req, const pc_error_t *error);
PC_EXPORT int pc_binary_request_with_timeout(pc_client_t* client, const char* route,
                                             uint8_t *data, int64_t len, void* ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
/**
 * Notify
 */

typedef void (*pc_notify_error_cb_t)(const pc_notify_t* req, const pc_error_t *error);
/**
 * pc_notify_t getters.
 *
 * All the getters should be called in pc_notify_cb_t to access read-only 
 * properties of the current pc_notify_t. 
 *
 * User should not hold any references to pc_notify_t.
 */
PC_EXPORT pc_client_t* pc_notify_client(const pc_notify_t* notify);
PC_EXPORT const char* pc_notify_route(const pc_notify_t* notify);
PC_EXPORT const pc_buf_t *pc_notify_msg(const pc_notify_t* notify);
PC_EXPORT int pc_notify_timeout(const pc_notify_t* notify);
PC_EXPORT void* pc_notify_ex_data(const pc_notify_t* notify);
/**
 * Initiate a notify.
 */
PC_EXPORT int pc_binary_notify_with_timeout(pc_client_t* client, const char* route, uint8_t *data, int64_t len,
                                            void* ex_data, int timeout, pc_notify_error_cb_t cb);
PC_EXPORT int pc_string_notify_with_timeout(pc_client_t* client, const char* route, const char *str, 
                                            void* ex_data, int timeout, pc_notify_error_cb_t cb);
/**
 * Utilities
 */
PC_EXPORT const char* pc_client_state_str(int state);
PC_EXPORT const char* pc_client_ev_str(int ev_type);
PC_EXPORT const char* pc_client_rc_str(int rc);
/**
 * Sets the certificates that the client trust in order to verify the server for TLS communication.
 * Returns `PC_RC_OK` in case of success otherwise `PC_RC_ERROR`. For more information, see
 * https://www.openssl.org/docs/man1.0.2/ssl/SSL_CTX_load_verify_locations.html
 */
PC_EXPORT int tr_uv_tls_set_ca_file(const char* ca_file, const char* ca_path);
/**
 * Macro implementation
 */
#define pc_lib_version() PC_VERSION_NUM
#define pc_lib_version_str() PC_VERSION_STR 