java/PitayaClient/src/main/java/dog/tale/pitaya/Pitaya.java


@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route,
                                             @Cast("uint8_t*") BytePointer data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, String route,
                                             @Cast("uint8_t*") ByteBuffer data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route,
                                             @Cast("uint8_t*") byte[] data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, String route,
                                             @Cast("uint8_t*") BytePointer data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route,
                                             @Cast("uint8_t*") ByteBuffer data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);
@NoException public static native int pc_binary_request_with_timeout(pc_client_t client, String route,
                                             @Cast("uint8_t*") byte[] data, @Cast("int64_t") long len, Pointer ex_data, int timeout,
                                             pc_request_success_cb_t success_cb, pc_request_error_cb_t error_cb);

/**
 * Notify
 */

public static class pc_notify_error_cb_t extends FunctionPointer {
    static { Loader.load(); }
    /** Pointer cast constructor. Invokes {@link Pointer#Pointer(Pointer)}. */
    public    pc_notify_error_cb_t(Pointer p) { super(p); }
    protected pc_notify_error_cb_t() { allocate(); }
    private native void allocate();
    public native void call(@Const pc_notify_t req, @Const pc_error_t error);
}

/**
 * pc_notify_t getters.
 *
 * All the getters should be called in pc_notify_cb_t to access read-only
 * properties of the current pc_notify_t.
 *
 * User should not hold any references to pc_notify_t.
 */
@NoException public static native pc_client_t pc_notify_client(@Const pc_notify_t notify);
@NoException public static native @Cast("const char*") BytePointer pc_notify_route(@Const pc_notify_t notify);
@NoException public static native @Const pc_buf_t pc_notify_msg(@Const pc_notify_t notify);
@NoException public static native int pc_notify_timeout(@Const pc_notify_t notify);
@NoException public static native Pointer pc_notify_ex_data(@Const pc_notify_t notify);

/**
 * Initiate a notify.
 */
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route, @Cast("uint8_t*") BytePointer data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, String route, @Cast("uint8_t*") ByteBuffer data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route, @Cast("uint8_t*") byte[] data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, String route, @Cast("uint8_t*") BytePointer data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route, @Cast("uint8_t*") ByteBuffer data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_binary_notify_with_timeout(pc_client_t client, String route, @Cast("uint8_t*") byte[] data, @Cast("int64_t") long len,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_string_notify_with_timeout(pc_client_t client, @Cast("const char*") BytePointer route, @Cast("const char*") BytePointer str,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);
@NoException public static native int pc_string_notify_with_timeout(pc_client_t client, String route, String str,
                                            Pointer ex_data, int timeout, pc_notify_error_cb_t cb);

/**
 * Utilities
 */
@NoException public static native @Cast("const char*") BytePointer pc_client_state_str(int state);
@NoException public static native @Cast("const char*") BytePointer pc_client_ev_str(int ev_type);
@NoException public static native @Cast("const char*") BytePointer pc_client_rc_str(int rc);

/**
 * set ca file for tls transports
 */

// #if !defined(PC_NO_UV_TCP_TRANS) && !defined(PC_NO_UV_TLS_TRANS)

/**
 * Sets the certificates that the client trust in order to verify the server for TLS communication.
 * Returns {@code PC_RC_OK} in case of success otherwise {@code PC_RC_ERROR}. For more information, see
 * https://www.openssl.org/docs/man1.0.2/ssl/SSL_CTX_load_verify_locations.html
 */
@NoException public static native int tr_uv_tls_set_ca_file(@Cast("const char*") BytePointer ca_file, @Cast("const char*") BytePointer ca_path);
@NoException public static native int tr_uv_tls_set_ca_file(String ca_file, String ca_path);

// #endif /* uv_tls */

/**
 * Macro implementation
 */
// #define pc_lib_version() PC_VERSION_NUM
// #define pc_lib_version_str() PC_VERSION_STR

// #ifdef __cplusplus
// #endif

// #endif /* PC_PITAYA_H */

}
